added login and signup page linking through landin g page

--- a/landing page/LandingPage.html
+++ b/landing page/LandingPage.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="/design.css">
+    <link rel="stylesheet" href="design.css">
 </head>
 <body>
     <div id="background-container">
         <header>
-                <img id="logo" src="/LOGO DUPLICATE.svg" alt="Your App Logo">
+                <img id="logo" src="LOGO DUPLICATE.svg" alt="Your App Logo">
                 <div id="options">
                     <a href="#" class="option">About Us</a>
                     <a href="#" class="option">Features</a>
@@ -22,8 +22,8 @@
                 <span id="uni">Uni</span> <span id="blind">Blind</span>
             </div>
             <div id="tagline">Chat Anonymously with your Acquaintances</div>
-            <button id="login" class="button">Log In</button>
-            <button id="signup" class="button">Sign Up</button>
+            <button onclick="window.location.href='/login/login.html'" id="login" class="button">Log In</button>
+            <button onclick="window.location.href='/Signup/Signup.html'" id="signup" class="button">Sign Up</button>
         </div>
     </div>
 </body>
