--- a/login/login.html
+++ b/login/login.html
@@ -50,7 +50,7 @@
             </div>
           </button>
         </div>
-        <p class="Signin">New User? <a href="/Signup/Signup.html">Log in</a></p>
+        <p class="Signin">New User? <a href="/Signup/Signup.html">Sign Up</a></p>
       </div>
     </div>
   </body>
